2006-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.c: Use parse_conf instead of parse_server_conf.
	* server-src/diskfile.c: Correct hostname allocation.

2006-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Jay Fenlason
	* common-src/rsh-security.c: Fix.

2006-10-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (get_config_options): Build and argv of the
	                                              -o arguments.
	* common-src/conffile.h (get_config_options): Prototype.
	* server-src/driverio.c: exec dumper/chunker/driver with the argv from
	                         get_config_options
	* server-src/amtape.c: Accept -o argument.
	* man/xml-source/amtape.8.xml: Document it.

2006-10-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Fix allocation problem on tapedev.

2006-10-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c (free_split_buffer): Correct free.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Fix formating.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Quote amname.

2006-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/dgram.c (dgram_cat),
	  common-src/packet.c (pkt_init, pkt_cat): Works correctly with
						   vsnprintf returning -1.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Improve message for dump larger than available
				tape space if runtapes > 1 and splitsize == 0.

2006-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (wait_children): Don't crash if dumper->chunker
					       is NULL

2006-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Call security_recvpkt() on A_SENDNACK
				 and dup P_REQ.
	* common-src/security-util.c: Improve message.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcleanupdisk.c: Accept -o arguments.